compiler/testData/diagnostics/tests/deparenthesize/ParenthesizedVariable.fir.kt
// RUN_PIPELINE_TILL: FRONTEND
fun test() {
    (d@ <!EXPRESSION_EXPECTED!>val bar = 2<!>)
}